Working project archive, spacing fixes for project index.

--- a/client/src/app/projects/index.component.scss
+++ b/client/src/app/projects/index.component.scss
@@ -9,6 +9,16 @@ app-button {
         display: block;
         margin-top: 14%;
     }
+
+    &.archive {
+        ::ng-deep a {
+            padding-top: 5%;
+            padding-bottom: 5%;
+            padding-left: 5%;
+            padding-right: 5%;
+        }
+            
+    }
 }
 
 .controls {
@@ -39,10 +49,15 @@ app-button {
 
 }
 
+
+
 #projects {
     justify-content: space-evenly;
 
     .project {
+        
+        flex: none;
+        width: 48%;
 
         .bg {
             display: flex;
@@ -55,5 +70,42 @@ app-button {
             font-size: 1.7em;
         }
 
+        @include phones {
+            width: 93%;
+        }
+
     }
+}
+
+#archive {
+
+    h3, div {
+        align-items: center;
+    }
+    
+    .columns {
+        margin-top: 5%;
+    }
+    .type {
+        display: flex;
+        font-weight: bold;
+        text-transform: uppercase;
+        line-height: 1.33;
+        letter-spacing: 1.5px;
+    }
+    .name {
+        font-size: 1.9em;
+        line-height: 1.41;
+        letter-spacing: 0.5px;
+    }
+    .arrow {
+        justify-content: right;
+        text-align: right;
+    }
+
+}
+
+#archive-mobile {
+    justify-content: center;
+    display: flex;
 }
